--- a/.github/workflows/other-task.yml
+++ b/.github/workflows/other-task.yml
@@ -4,5 +4,4 @@ jobs:
   New-Task:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Running new task
-      
+      - run: echo "Running new task"
