--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,4 +7,8 @@ jobs:
       - run: echo "Hello World!"
       - run: echo "Hello World2"
       - run: echo "Hello WOrld3"
-
+  CheckoutRepo:
+    runs-on: ubuntu-latest
+    steps:
+      - run: actions/checkout@v4
+      - run: echo "Cloned ${{ github.repository }} successfully!!!
